Fixing the Logo spacing

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -33,6 +33,7 @@ header{
 }
 
 header img{
+    margin-left: 10px;
     border-radius: 50%;
     width: 30px;
     height: 30px;
